create github pages

--- a/referenzen.html
+++ b/referenzen.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/e">best web maker software</a></section><section class="counters1 counters cid-qOjRemNIBu" id="counters1-43">
+<section class="engine"><a href="https://mobirise.ws/o">best mobile website builder</a></section><section class="counters1 counters cid-qOjRemNIBu" id="counters1-43">
 
     
 
@@ -123,7 +123,7 @@
                     <h4 class="card-title py-3 mbr-fonts-style display-7">
                         Seminarteilnehmerverwaltung
                     </h4>
-                    <p class="mbr-text mbr-fonts-style display-7">- Migration der Daten aus einer MSSQL DB in die Oracle DB. - Entwicklung der GUI in Oracle APEX. 
+                    <p class="mbr-text mbr-fonts-style display-7">- Migration der Daten aus einer MSSQL Datenbank in die Oracle Datenbank. <br>- Entwicklung der GUI in Oracle APEX. 
 <br>- Modellierung und Implementierung eines Autorisierungskonzepts. 
 <br>- Reporting (Zusammenfassungen/Verdichtung der verabeiteten Daten für die Sachbearbeiter/Bereichsleiter)</p>
                 </div>
@@ -137,8 +137,7 @@
                     <h4 class="card-title py-3 mbr-fonts-style display-7">
                         Online-Umfrage-Anwendung
                     </h4>
-                    <p class="mbr-text mbr-fonts-style display-7">-Erstellung einer neuen Datenbank die von Produktion getrennt sein soll. 
-<br>-Einspielen der Daten- und Prozessstruktur als Spiegel nicht nicht-öffentlichen Produktivdatenbank. 
+                    <p class="mbr-text mbr-fonts-style display-7">-Erstellung einer neuen, von der Produktivdatenbank getrennten, Datenbank.&nbsp;<br>-Einspielen der Daten- und Prozessstruktur als Spiegel der nicht-öffentlichen Produktivdatenbank. 
 <br>-Prozedur zur Übernahme der pseudonymisierten Daten in die Produktivdatenbank.</p>
                 </div>
             </div>
@@ -149,9 +148,9 @@
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-7">
-                        Scanmanagement</h4>
+                        Scan-Management</h4>
                     <p class="mbr-text mbr-fonts-style display-7">
-                        - Einscanen der Dokumente<br>- Bearbeitung nach verschiedenen Parameter<br>- Auslesen der Zonen im Dokument<br>- Text und Schrift Erkannung<br>- Zuordnundg in die Datenbank</p>
+                        - Einscannen von Dokumenten<br>- Bearbeitung nach verschiedenen Parametern<br>- Auslesen der Zonen im Dokument<br>- Text- und Schrifterkennung<br>- Zuordnung in der Datenbank</p>
                 </div>
             </div>
 
@@ -178,9 +177,9 @@
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-7">
                         Rechnungerstellung</h4>
-                    <p class="mbr-text mbr-fonts-style display-7">- Erstellung und Korrekturen der Rechnungen
-<br> - Erstellung der Mahnungen<br> - Zwangsvollstreckung
-<br>    Für die gemahnten offenen Beträge werden Zwangsvollstreckungsaufträge erstellt und verwaltet.<br>-&nbsp;Automatisierte Buchung der Daten in der Buchhaltung in den dafür vorgesehene Konten</p>
+                    <p class="mbr-text mbr-fonts-style display-7">- Erstellung und Korrekturen von Rechnungen
+<br> - Erstellung von Mahnungen<br> - Zwangsvollstreckung
+<br>    Für die gemahnten offenen Beträge werden Zwangsvollstreckungsaufträge erstellt und verwaltet.<br>-&nbsp;Automatisierte Buchung der Daten in der Buchhaltung in den dafür vorgesehenen Konten</p>
                 </div>
             </div>
 
@@ -190,7 +189,7 @@
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-7">Lastschriftverfahren&nbsp;</h4>
-                    <p class="mbr-text mbr-fonts-style display-7">-Erfassung der Lastschriftermächtigungen und Generierung der für den Einzug der zu zahlenden Beträge nötigen Dateien in SEPA Format.</p>
+                    <p class="mbr-text mbr-fonts-style display-7">-Erfassung von Lastschriftermächtigungen und Generierung der für den Einzug der zu zahlenden Beträge nötigen Daten im SEPA Format.</p>
                 </div>
             </div>
 
@@ -201,7 +200,7 @@
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-7">Datenimport und -export</h4>
                     <p class="mbr-text mbr-fonts-style display-7">
-                        - Importieren der Daten aus externe Quellen mit anschleißenden Integrieren im Zielsystem und Exportieren der im System erfassten Daten für externe Verwendung.</p>
+                        - Importieren von Daten aus externen Quellen mit anschließender Migration im Zielsystem und Export der im System erfassten Daten für externe Verwendung.</p>
                 </div>
             </div>
 
@@ -227,8 +226,8 @@
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-7">
-                        Druckmanagementool</h4>
-                    <p class="mbr-text mbr-fonts-style display-7">- Generierung der Berichten (100000 am Tag)<br>- Bereitstellung für Massendruck<br>- Zuordnung in die Datenbank<br>- Bereitstellung für Kuvertiermaschine</p>
+                        Druckmanagementtool</h4>
+                    <p class="mbr-text mbr-fonts-style display-7">- Generierung von Berichten (100000 am Tag)<br>- Bereitstellung der Daten für den Massendruck<br>- Speicherung der Dokumente in der Datenbank<br>- Bereitstellung der Daten für Kuvertiermaschine</p>
                 </div>
             </div>
 
