--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
+  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/c">best website maker</a></section><section class="cid-qNtXIIVate mbr-parallax-background" id="header2-3j">
+<section class="engine"><a href="https://mobirise.ws/a">best free site builder</a></section><section class="cid-qPt158yv9L mbr-fullscreen mbr-parallax-background" id="header2-6i">
 
     
 
@@ -83,18 +83,14 @@
                 <p class="mbr-text pb-3 mbr-fonts-style display-7">Wer wir sind 
 <br>
 <br><em>dbprc </em>ist ein erfolgreicher mittelständischer IT-Dienstleister. 
-<br>Wir sind ein innovatives Team von hochqualifizierten Informatikern und Entwicklern mit Niederlassungen in Mannheim und Pforzheim
-<br>
-<br>Unsere Kernkompetenzen liegen in der ORACLE® -Anwendungsentwicklung und der ganzheitlichen Beratung und Betreuung rund um ORACLE® -Datenbanksysteme
-<br>
-<br>Unsere Kunden sind u.a. bundesweit tätige öffentliche Organisationen und Unternehmen der Privatwirtschaft
-<br>
+<br>Wir sind ein innovatives Team von hochqualifizierten Informatikern und Entwicklern mit Niederlassungen in Mannheim und Pforzheim.&nbsp;<br>
+<br>Unsere Kernkompetenzen liegen in der ORACLE® -Anwendungsentwicklung und der ganzheitlichen Beratung und Betreuung rund um ORACLE® -Datenbanksysteme.&nbsp;<br>
+<br>Unsere Kunden sind u.a. bundesweit tätige öffentliche Organisationen und Unternehmen der Privatwirtschaft.&nbsp;<br>
 <br>Was wir machen &nbsp;<br>
 <br>Seit 1996 entwickeln wir entweder vor Ort oder an unseren Standorten für unsere Kunden individuelle und maßgeschneiderte Softwarelösungen von höchster Qualität und Zuverlässigkeit in den Bereichen  
-<br>ORACLE® + Java + Android
-<br>
-<br>Unsere Spezialtäten sind Web-Anwendungen im Intranet oder Internet(Cloud) basierend auf ORACLE® APEX</p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="page8.html">LIVE DEMO</a></div>
+<br>ORACLE® + Java + Android.&nbsp;<br>
+<br>Unsere Spezialitäten sind Web-Anwendungen im Intranet oder Internet(Cloud) basierend auf ORACLE® APEX.</p>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="countdown.html">LIVE DEMO</a></div>
             </div>
         </div>
     </div>
@@ -105,7 +101,7 @@
     </div>
 </section>
 
-<section class="cid-qOjXuMpD75 mbr-reveal" id="footer1-45">
+<section class="cid-qPt15IAo2s mbr-reveal" id="footer1-6j">
 
     
 
@@ -191,11 +187,11 @@
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/parallax/jarallax.min.js"></script>
-  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
-  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
+  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
+  <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
+  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
