--- a/wir.html
+++ b/wir.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/h">how to make free website</a></section><section class="timeline2 cid-qLvZgoInbO mbr-parallax-background" id="timeline2-13">
+<section class="engine"><a href="https://mobirise.ws/j">design your own website</a></section><section class="timeline2 cid-qLvZgoInbO mbr-parallax-background" id="timeline2-13">
 
     
 
@@ -88,9 +88,9 @@
                 <div class="col-xs-12 col-md-6 align-left">
                     <div class="timeline-text-content">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Unsere Geschichte</h4>
-                        <p class="mbr-timeline-text mbr-fonts-style display-7">Ulrich Wachter sen. hat 1996 die dbprc (database and process) gegründet, um sich von den konvenzionellen Wegen der Datenbankenentwicklung zu lösen und um neue und einfachere Datenstrukturen zu entwickeln.
+                        <p class="mbr-timeline-text mbr-fonts-style display-7">Ulrich Wachter sen. hat 1996 die dbprc (database and process) gegründet, um sich von den konventionellen Wegen der Datenbankenentwicklung zu lösen und um neue und einfachere Datenstrukturen zu entwickeln.
 <br>
-<br>Diese Philiosophie wurde von ihm auch auf unsere Mitarbeiter übertragen und verinnerlicht.
+<br>Diese Philosophie wurde von ihm auch auf unsere Mitarbeiter übertragen und verinnerlicht.
 <br>
 <br>Seit 2015 wird das Unternehmen nun in zweiter Generation von Ulrich Ph. Wachter weitergeführt.<br></p>
                      </div>
@@ -104,7 +104,7 @@
                 <div class="col-xs-12 col-md-6 align-left ">
                     <div class="timeline-text-content">
                         <h4 class="mbr-timeline-title pb-3 mbr-fonts-style display-5">Unsere Kunden</h4>
-                        <p class="mbr-timeline-text mbr-fonts-style display-7"><em>Wir haben bereits mit einer Vielzahl von Kunden aus unterschiedlichen Branchen zusammengearbeitet und uns verschiedensten Herausforderungen mit Ihnen gestellt. Zu unseren Kunden zählten bislang u.a.:
+                        <p class="mbr-timeline-text mbr-fonts-style display-7"><em>Wir haben bereits mit einer Vielzahl von Kunden aus unterschiedlichen Branchen zusammengearbeitet und uns verschiedenen Herausforderungen&nbsp;mit Ihnen gestellt. Zu unseren Kunden zählten bislang u.a.:
 </em><br>
 <br>- Ein weltweit agierender Technologiekonzern 
 <br>- Ein bundesweit tätiges Personaldienstleistungsunternehmen 
