create github pages

--- a/lösungen_2.html
+++ b/lösungen_2.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/b">best free web site creator</a></section><section class="tabs3 cid-qPsqqSkQww mbr-parallax-background" id="tabs3-6c">
+<section class="engine"><a href="https://mobirise.ws/b">best site creator</a></section><section class="tabs3 cid-qPsqqSkQww mbr-parallax-background" id="tabs3-6c">
 
     
 
@@ -102,7 +102,7 @@
                                 <span class="mbr-iconfont mbri-setting"></span>
                             </div>
                             <h4 class="mbr-element-title  align-center mbr-fonts-style pb-2 display-5">Installation/Tuning/Upgrade</h4>
-                            <p class="mbr-section-text  align-center mbr-fonts-style display-7"><em>Wir setzen neue Datenbanken auf und opimieren Ihre bestehenden Systeme. 
+                            <p class="mbr-section-text  align-center mbr-fonts-style display-7"><em>Wir setzen neue Datenbanken auf und optimieren Ihre bestehenden Systeme. 
 </em><br>
 <br>
 <br>Für Sie erstellen wir eine neue Datenbank in Ihrem lokalen Netz. 
@@ -371,7 +371,7 @@
     </div>
 </section>
 
-<section class="cid-qPsqre4mrW mbr-reveal" id="footer1-6d">
+<section class="cid-qSLi8Oer5P mbr-reveal" id="footer1-6u">
 
     
 
@@ -388,15 +388,13 @@
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3"><br><br><br><br><br><br>Ihr Ansprechpartner</h5>
-                <p class="mbr-text"></p><p>dbprc GmbH
+                <p class="mbr-text"></p><p></p><p>dbprc GmbH
 <br>Ulrich Ph. Wachter
 <br>Dynamostraße 15
 <br>68165 Mannheim
 <br>Tel.: <a href="tel:+49 621 124706 10">+49 (0)621 124706 10</a>
 <br>Fax: <a href="tel:+49 621 124706 11">+49 (0)621 124706 11</a>
-<br>E-Mail: <a href="mailto:ulrich.ph.wachter@dbprc.de">ulrich.ph.wachter@dbprc.de</a>
-<br> 
-<br><br><br><em><a href="formular.html">Kontakt</a>&nbsp; &nbsp; &nbsp;</em>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <em><a href="impressum.html">Impressum</a></em></p><p></p>
+<br>E-Mail: <a href="mailto:ulrich.ph.wachter@dbprc.de">ulrich.ph.wachter@dbprc.de</a></p><p></p><p></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3"><br><br><br><br><br><br>dbprc GmbH 
@@ -405,7 +403,7 @@
 <br>75175 Pforzheim 
 <br>Tel.: <a href="tel:+49 7231 45504 08">+49 (0)7231 45504 08</a> 
 <br>Fax: <a href="tel:+49 7231 45504 07">+49 (0)7231 45504 07</a> 
-<br>E-Mail: <a href="mailto:info@dbprc.de">info@dbprc.de</a>&nbsp;</p>
+<br>E-Mail: <a href="mailto:info@dbprc.de">info@dbprc.d</a><a href="mailto:info@dbprc.de">e</a><br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3"><br><br><br><br><br><br>dbprc GmbH 
@@ -425,8 +423,7 @@
             </div>
             <div class="media-container-row mbr-white">
                 <div class="col-sm-6 copyright">
-                    <p class="mbr-text mbr-fonts-style display-7">
-                        © 2018 dbprc GmbH &nbsp;- All Rights Reserved
+                    <p class="mbr-text mbr-fonts-style display-7"><a href="formular.html">Kontakt</a> &nbsp; <a href="impressum.html">Impressum</a> &nbsp; <a href="datenschutzerklaerung.html">Datenschutzerklärung</a><br><br>© 2018 dbprc GmbH &nbsp;- All Rights Reserved
                     </p>
                 </div>
                 <div class="col-md-6">
