--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
+  <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/a">best free site builder</a></section><section class="cid-qPt158yv9L mbr-fullscreen mbr-parallax-background" id="header2-6i">
+<section class="engine"><a href="https://mobirise.ws/n">mobile website builder app</a></section><section class="cid-qPJRULKSVc mbr-fullscreen mbr-parallax-background" id="header2-6m">
 
     
 
@@ -78,7 +78,7 @@
     <div class="container align-center">
         <div class="row justify-content-md-center">
             <div class="mbr-white col-md-10">
-                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-2"><span style="font-weight: normal;">dbprc– Einfachheit in einer neuen Dimension</span></h1>
+                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-2"><span style="font-weight: normal;"><br></span><br><span style="font-weight: normal;">dbprc– Einfachheit in einer neuen Dimension</span></h1>
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-7">Wer wir sind 
 <br>
@@ -118,15 +118,13 @@
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3"><br><br><br><br><br><br>Ihr Ansprechpartner</h5>
-                <p class="mbr-text"></p><p>dbprc GmbH
+                <p class="mbr-text"></p><p></p><p>dbprc GmbH
 <br>Ulrich Ph. Wachter
 <br>Dynamostraße 15
 <br>68165 Mannheim
 <br>Tel.: <a href="tel:+49 621 124706 10">+49 (0)621 124706 10</a>
 <br>Fax: <a href="tel:+49 621 124706 11">+49 (0)621 124706 11</a>
-<br>E-Mail: <a href="mailto:ulrich.ph.wachter@dbprc.de">ulrich.ph.wachter@dbprc.de</a>
-<br> 
-<br><br><br><em><a href="formular.html">Kontakt</a>&nbsp; &nbsp; &nbsp;</em>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <em><a href="impressum.html">Impressum</a></em></p><p></p>
+<br>E-Mail: <a href="mailto:ulrich.ph.wachter@dbprc.de">ulrich.ph.wachter@dbprc.de</a></p><p></p><p></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3"><br><br><br><br><br><br>dbprc GmbH 
@@ -135,7 +133,7 @@
 <br>75175 Pforzheim 
 <br>Tel.: <a href="tel:+49 7231 45504 08">+49 (0)7231 45504 08</a> 
 <br>Fax: <a href="tel:+49 7231 45504 07">+49 (0)7231 45504 07</a> 
-<br>E-Mail: <a href="mailto:info@dbprc.de">info@dbprc.de</a>&nbsp;</p>
+<br>E-Mail: <a href="mailto:info@dbprc.de">info@dbprc.d</a><a href="mailto:info@dbprc.de">e</a><br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3"><br><br><br><br><br><br>dbprc GmbH 
@@ -155,8 +153,7 @@
             </div>
             <div class="media-container-row mbr-white">
                 <div class="col-sm-6 copyright">
-                    <p class="mbr-text mbr-fonts-style display-7">
-                        © 2018 dbprc GmbH &nbsp;- All Rights Reserved
+                    <p class="mbr-text mbr-fonts-style display-7"><a href="formular.html">Kontakt</a> &nbsp; <a href="impressum.html">Impressum</a> &nbsp; <a href="datenschutzerklaerung.html">Datenschutzerklärung</a><br><br>© 2018 dbprc GmbH &nbsp;- All Rights Reserved
                     </p>
                 </div>
                 <div class="col-md-6">
@@ -187,11 +184,11 @@
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/dropdown/js/script.min.js"></script>
-  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/parallax/jarallax.min.js"></script>
-  <script src="assets/smoothscroll/smooth-scroll.js"></script>
+  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
+  <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
+  <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
