--- a/team.html
+++ b/team.html
@@ -69,15 +69,15 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/n">free website builder app</a></section><section class="carousel slide cid-qOHH7WRFZl" data-interval="false" id="slider1-4r">
+<section class="engine"><a href="https://mobirise.ws/e">best web building software</a></section><section class="carousel slide cid-qOHH7WRFZl" data-interval="false" id="slider1-4r">
 
     
 
-    <div class="full-screen"><div class="mbr-slider slide carousel" data-pause="true" data-keyboard="false" data-ride="carousel" data-interval="6000"><ol class="carousel-indicators"><li data-app-prevent-settings="" data-target="#slider1-4r" class=" active" data-slide-to="0"></li><li data-app-prevent-settings="" data-target="#slider1-4r" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#slider1-4r" data-slide-to="2"></li></ol><div class="carousel-inner" role="listbox"><div class="carousel-item slider-fullscreen-image active" data-bg-video-slide="false" style="background-image: url(assets/images/db-01-001-v3-2000x1332.jpg);"><div class="container container-slide"><div class="image_wrapper"><div class="mbr-overlay"></div><img src="assets/images/db-01-001-v3-2000x1332.jpg"><div class="carousel-caption justify-content-center"><div class="col-10 align-right"><h2 class="mbr-fonts-style display-2">Dynamisch und unkompliziert</h2><p class="lead mbr-text mbr-fonts-style display-5">... unser Ziel ist es, schnell Lösungen für Sie auf den Tisch zu bringen.&nbsp;<br></p></div></div></div></div></div><div class="carousel-item slider-fullscreen-image" data-bg-video-slide="false" style="background-image: url(assets/images/db-01-2-2000x1333.jpg);"><div class="container container-slide"><div class="image_wrapper"><div class="mbr-overlay"></div><img src="assets/images/db-01-2-2000x1333.jpg"><div class="carousel-caption justify-content-center"><div class="col-10 align-right"><h2 class="mbr-fonts-style display-2">Transparent und flexibel</h2><p class="lead mbr-text mbr-fonts-style display-5">... wir analysieren nachvollziehbar verschiedene Lösungswege und zeigen Ihnen den Weg durch die richtige Tür. Wir lassen dabei immer Raum für neue Ideen.</p></div></div></div></div></div><div class="carousel-item slider-fullscreen-image" data-bg-video-slide="false" style="background-image: url(assets/images/db-01-3-2000x1333.jpg);"><div class="container container-slide"><div class="image_wrapper"><div class="mbr-overlay" style="opacity: 0.4;"></div><img src="assets/images/db-01-3-2000x1333.jpg"><div class="carousel-caption justify-content-center"><div class="col-10 align-right"><h2 class="mbr-fonts-style display-2">Strukturiert und fokussiert</h2><p class="lead mbr-text mbr-fonts-style display-5">... wir arbeiten mit einem einfachen und effektiven Ansatz und konzentrieren uns auf das, was Sie brauchen, ob bei Ihnen vor Ort oder bei uns am Platz. &nbsp;</p></div></div></div></div></div></div><a data-app-prevent-settings="" class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#slider1-4r"><span aria-hidden="true" class="mbri-left mbr-iconfont"></span><span class="sr-only">Previous</span></a><a data-app-prevent-settings="" class="carousel-control carousel-control-next" role="button" data-slide="next" href="#slider1-4r"><span aria-hidden="true" class="mbri-right mbr-iconfont"></span><span class="sr-only">Next</span></a></div></div>
+    <div class="full-screen"><div class="mbr-slider slide carousel" data-pause="true" data-keyboard="false" data-ride="carousel" data-interval="6000"><ol class="carousel-indicators"><li data-app-prevent-settings="" data-target="#slider1-4r" data-slide-to="0"></li><li data-app-prevent-settings="" data-target="#slider1-4r" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#slider1-4r" class=" active" data-slide-to="2"></li></ol><div class="carousel-inner" role="listbox"><div class="carousel-item slider-fullscreen-image" data-bg-video-slide="false" style="background-image: url(assets/images/db-01-001-v3-2000x1332.jpg);"><div class="container container-slide"><div class="image_wrapper"><div class="mbr-overlay"></div><img src="assets/images/db-01-001-v3-2000x1332.jpg"><div class="carousel-caption justify-content-center"><div class="col-10 align-right"><h2 class="mbr-fonts-style display-2">Dynamisch und unkompliziert</h2><p class="lead mbr-text mbr-fonts-style display-5">... unser Ziel ist es, schnell Lösungen für Sie auf den Tisch zu bringen.&nbsp;<br></p></div></div></div></div></div><div class="carousel-item slider-fullscreen-image" data-bg-video-slide="false" style="background-image: url(assets/images/db-01-2-2000x1333.jpg);"><div class="container container-slide"><div class="image_wrapper"><div class="mbr-overlay"></div><img src="assets/images/db-01-2-2000x1333.jpg"><div class="carousel-caption justify-content-center"><div class="col-10 align-right"><h2 class="mbr-fonts-style display-2">Transparent und flexibel</h2><p class="lead mbr-text mbr-fonts-style display-5">... wir analysieren nachvollziehbar verschiedene Lösungswege und zeigen Ihnen den Weg durch die richtige Tür. Wir lassen dabei immer Raum für neue Ideen.<br></p></div></div></div></div></div><div class="carousel-item slider-fullscreen-image active" data-bg-video-slide="false" style="background-image: url(assets/images/db-01-3-2000x1333.jpg);"><div class="container container-slide"><div class="image_wrapper"><div class="mbr-overlay"></div><img src="assets/images/db-01-3-2000x1333.jpg"><div class="carousel-caption justify-content-center"><div class="col-10 align-right"><h2 class="mbr-fonts-style display-2">Strukturiert und fokussiert</h2><p class="lead mbr-text mbr-fonts-style display-5">... wir arbeiten mit einem einfachen und effektiven Ansatz und konzentrieren uns auf das, was Sie brauchen, ob bei Ihnen vor Ort oder bei uns am Platz.<br></p></div></div></div></div></div></div><a data-app-prevent-settings="" class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#slider1-4r"><span aria-hidden="true" class="mbri-left mbr-iconfont"></span><span class="sr-only">Previous</span></a><a data-app-prevent-settings="" class="carousel-control carousel-control-next" role="button" data-slide="next" href="#slider1-4r"><span aria-hidden="true" class="mbri-right mbr-iconfont"></span><span class="sr-only">Next</span></a></div></div>
 
 </section>
 
-<section class="cid-qPmeaXTXpu mbr-reveal" id="footer1-5i">
+<section class="cid-qSLitc7Qsi mbr-reveal" id="footer1-72">
 
     
 
@@ -94,15 +94,13 @@
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3"><br><br><br><br><br><br>Ihr Ansprechpartner</h5>
-                <p class="mbr-text"></p><p>dbprc GmbH
+                <p class="mbr-text"></p><p></p><p>dbprc GmbH
 <br>Ulrich Ph. Wachter
 <br>Dynamostraße 15
 <br>68165 Mannheim
 <br>Tel.: <a href="tel:+49 621 124706 10">+49 (0)621 124706 10</a>
 <br>Fax: <a href="tel:+49 621 124706 11">+49 (0)621 124706 11</a>
-<br>E-Mail: <a href="mailto:ulrich.ph.wachter@dbprc.de">ulrich.ph.wachter@dbprc.de</a>
-<br> 
-<br><br><br><em><a href="formular.html">Kontakt</a>&nbsp; &nbsp; &nbsp;</em>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <em><a href="impressum.html">Impressum</a></em></p><p></p>
+<br>E-Mail: <a href="mailto:ulrich.ph.wachter@dbprc.de">ulrich.ph.wachter@dbprc.de</a></p><p></p><p></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3"><br><br><br><br><br><br>dbprc GmbH 
@@ -111,7 +109,7 @@
 <br>75175 Pforzheim 
 <br>Tel.: <a href="tel:+49 7231 45504 08">+49 (0)7231 45504 08</a> 
 <br>Fax: <a href="tel:+49 7231 45504 07">+49 (0)7231 45504 07</a> 
-<br>E-Mail: <a href="mailto:info@dbprc.de">info@dbprc.de</a>&nbsp;</p>
+<br>E-Mail: <a href="mailto:info@dbprc.de">info@dbprc.d</a><a href="mailto:info@dbprc.de">e</a><br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3"><br><br><br><br><br><br>dbprc GmbH 
@@ -131,8 +129,7 @@
             </div>
             <div class="media-container-row mbr-white">
                 <div class="col-sm-6 copyright">
-                    <p class="mbr-text mbr-fonts-style display-7">
-                        © 2018 dbprc GmbH &nbsp;- All Rights Reserved
+                    <p class="mbr-text mbr-fonts-style display-7"><a href="formular.html">Kontakt</a> &nbsp; <a href="impressum.html">Impressum</a> &nbsp; <a href="datenschutzerklaerung.html">Datenschutzerklärung</a><br><br>© 2018 dbprc GmbH &nbsp;- All Rights Reserved
                     </p>
                 </div>
                 <div class="col-md-6">
